# adobe

./: .env  .replit  README.md  analyzer.py  app.py  ml_classifier.py  pdf_analyzer.py  pipeline.py  pyproject.toml  replit.md  requirements.txt  result_output.html
1A_test/: app.py  pdf_analyzer.py
models/: heading_classifier.pkl  heading_vectorizer.pkl  title_classifier.pkl  title_vectorizer.pkl
static/js/: upload.js
templates/: index.html  result.html
uploads/: .gitkeep
